# piano

./: .file-registry.json  .gitignore  Cargo.toml  bacon.toml  build.rs  build.sh
docs/plans/: 2026-03-02-piano-fall-design.md  2026-03-02-piano-fall-implementation.md
docs/plans/issues/: 001-keyboard-horizontal-scroll.md  002-manual-key-input.md  003-next-note-flashlight.md
src/: audio.rs  keyboard.rs  lib.rs  main.rs  note.rs
src/renderer/: bloom.rs  keys.rs  mod.rs  particles.rs  quad.rs
src/shaders/: bloom_extract.wgsl  blur.wgsl  composite.wgsl  key3d.wgsl  particle.wgsl  scene.wgsl
web/: index.html
