[package]
name = "piano-fall"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "piano-fall"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.19", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document", "Window", "Element", "HtmlCanvasElement",
    "Performance",
    "AudioContext", "AudioBuffer", "AudioBufferSourceNode",
    "AudioDestinationNode", "AudioNode", "AudioParam",
    "BaseAudioContext",
    "Request", "RequestInit", "RequestMode", "Response",
] }
